fix layout and create cart

--- a/pizzeria/src/scss/app.scss
+++ b/pizzeria/src/scss/app.scss
@@ -1,7 +1,7 @@
-@import './variables';
-@import './libs/normalize';
+@import "./variables";
+@import "./libs/normalize";
 
-@import './components/all';
+@import "./components/all";
 
 body {
   background-color: $background;
@@ -17,22 +17,57 @@ body {
 }
 
 .content {
-  padding: 40px 0;
+  padding: 40px 20px;
 
   &__title {
     margin: 35px 0;
   }
 
-  &__items {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+  .content__items {
+    display: block;
+  }
+
+  &__items_main {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-column-gap: 11px;
+    grid-row-gap: 20px;
+
+    @media (max-width: 1400px) {
+      grid-template-columns: repeat(3, 1fr);
+    }
+
+    @media (max-width: 1060px) {
+      grid-template-columns: repeat(2, 1fr);
+    }
+
+    @media (max-width: 730px) {
+      grid-template-columns: repeat(1, 1fr);
+    }
   }
 
   &__top {
     display: flex;
     align-items: center;
     justify-content: space-between;
+
+
+    @media (max-width: 1260px) {
+      flex-direction: column-reverse;
+
+      .categories {
+        margin-top: 30px;
+
+        ul {
+          flex-wrap: wrap;
+          justify-content: center;
+          li {
+            margin: 10px;
+          }
+        }
+      }
+    }
   }
 }
 
@@ -129,6 +164,8 @@ body {
       flex-direction: column;
       justify-content: center;
       width: 40%;
+
+
 
       h3 {
         font-weight: bold;
